2005-05-25  Paul Stevens <paul@nfg.nl>

	* db.h, db.c, auth/authsql.c, auth/authldap.c,
	sql/mysql/add_usermap.mysql, sql/mysql/create_tables_innoDB.mysql, 
	sql/postgresql/add_usermap.pgsql, sql/postgresql/create_tables.pgsql:
	reimplemented Jesse Norell's usermap patch in 2.1.
	
2005-05-24  Paul Stevens <paul@nfg.nl>

	* server.c(ParentSigHandler): finalize fix for #199.
	* imaputil.c, check_dbmail_imapd.c (dbmail_imap_astring_as_string): cleanup and fixes.
	* db.c, db.h: start using symbolic return codes.
	
2005-05-18  Paul Stevens <paul@nfg.nl>

	* check_dbmail_deliver.c, config.c, lmtpd.c, check_dbmail_server.c, 
	pop3d.c, mime.c, imapd.c, dbmail-message.c, check_dbmail_imapd.c,
	main.c, check_dbmail_message.c: move the g_mime_init/shutdown hooks to
	the main loop of each program. This fixes some possible double frees.
	* debian/po/cz.po: added czech translations for debconf.
	
2005-05-17  Paul Stevens <paul@nfg.nl>

	* misc.h, db.c, db.h, imapcommands.c, imaputil.c, imaputil.h,
	dbmail.h, test-scripts/testimap.py, misc.c: replaced regex code in
	_ic_list with new listex_match.
	
2005-05-13  Paul Stevens <paul@nfg.nl>

	* imaputil.c, imaputil.h, check_dbmail_imapd.c: integrated Geo's
	listex_match code in the test-frame.

2005-05-11  Paul Stevens <paul@nfg.nl>

	* server.h, server.c, serverchild.c, lmtpd.c, dbmail.conf: added 
	unix socket support for lmtp.

2005-05-09  Paul Stevens <paul@nfg.nl>

	* pool.c (manage_stop_children): guard against sending broadcast
	signals (closes: #198).
	* server.c (ParentSigHandler): wait for zombies (closes: #199).
	
2005-05-06  Paul Stevens <paul@nfg.nl>

	* check_dbmail_deliver.c, dbmail-user.c, config.c, lmtp.c, dsn.c, 
	check_dbmail_common.c, pipe.c, dbmail-message.c, auth/authldap.c,
	main.c, check_dbmail_message.c: plugged lots of memory leakage.
	* dbmail-imapsession.c: fixed a double free.
	* server.c: use db_check_connection instead of
	db_connect/db_disconnect in main loop.

2005-05-03  Paul Stevens <paul@nfg.nl>
